--- a/content/resources/mit21h_009s14_lec_12.md
+++ b/content/resources/mit21h_009s14_lec_12.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains the information regarding Atlantic Slavery and
   Haitian Independence: Successes and Failures in the Age of Revolution.'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21h-009-the-world-1400-present-spring-2014/480ac16a06f3ec0567a358ca88f52c60_MIT21H_009S14_Lec_12.pdf
+file: /media/courses/21h-009-the-world-1400-present-spring-2014/480ac16a06f3ec0567a358ca88f52c60_MIT21H_009S14_Lec_12.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Slides
+parent_type: CourseSection
 resourcetype: Document
 title: 'Atlantic Slavery and Haitian Independence: Successes and Failures in the Age
   of Revolution'
