--- a/content/resources/mit21h_009s14_lec_18.md
+++ b/content/resources/mit21h_009s14_lec_18.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains the information regarding The Big Picture III:
   Globalization, 1870-Present?'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21h-009-the-world-1400-present-spring-2014/5e4ebecd6f477da0ab1e21e2b93292b1_MIT21H_009S14_Lec_18.pdf
+file: /media/courses/21h-009-the-world-1400-present-spring-2014/5e4ebecd6f477da0ab1e21e2b93292b1_MIT21H_009S14_Lec_18.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Slides
+parent_type: CourseSection
 resourcetype: Document
 title: 'The Big Picture III: Globalization, 1870-Present?'
 uid: 5e4ebecd-6f47-7da0-ab1e-21e2b93292b1
