--- a/content/resources/mit21h_009s14_lec_5.md
+++ b/content/resources/mit21h_009s14_lec_5.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This file contains the information regarding Contact and Conflict in
   East Asia.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21h-009-the-world-1400-present-spring-2014/3fce3aabdf6fe1f1bfb154230ef7b378_MIT21H_009S14_Lec_5.pdf
+file: /media/courses/21h-009-the-world-1400-present-spring-2014/3fce3aabdf6fe1f1bfb154230ef7b378_MIT21H_009S14_Lec_5.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Slides
+parent_type: CourseSection
 resourcetype: Document
 title: Contact and Conflict in East Asia
 uid: 3fce3aab-df6f-e1f1-bfb1-54230ef7b378
