--- a/content/resources/mit21h_009s14_lec_7.md
+++ b/content/resources/mit21h_009s14_lec_7.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This file contains the information regarding Contact and Conflict in
   the Americas.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21h-009-the-world-1400-present-spring-2014/52efa310a3f926ac616e9c99257d49ee_MIT21H_009S14_Lec_7.pdf
+file: /media/courses/21h-009-the-world-1400-present-spring-2014/52efa310a3f926ac616e9c99257d49ee_MIT21H_009S14_Lec_7.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Slides
+parent_type: CourseSection
 resourcetype: Document
 title: Contact and Conflict in the Americas
 uid: 52efa310-a3f9-26ac-616e-9c99257d49ee
