--- a/content/resources/mit21h_009s14_lec_8.md
+++ b/content/resources/mit21h_009s14_lec_8.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: "This file contains the information regarding Contact and Conflict in\
   \ the Americas \u2013 Discussion."
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21h-009-the-world-1400-present-spring-2014/1fb58bd03f889c83364a74f9a426502a_MIT21H_009S14_Lec_8.pdf
+file: /media/courses/21h-009-the-world-1400-present-spring-2014/1fb58bd03f889c83364a74f9a426502a_MIT21H_009S14_Lec_8.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Slides
+parent_type: CourseSection
 resourcetype: Document
 title: "Contact and Conflict in the Americas \u2013 Discussion"
 uid: 1fb58bd0-3f88-9c83-364a-74f9a426502a
