Sync all content

--- a/content/resources/mit21h_009s14_lec_10.md
+++ b/content/resources/mit21h_009s14_lec_10.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
+parent_uid: 6414518c-9779-ff96-7dd5-75efc5330c31
 resourcetype: Document
 title: 'The Big Picture II: Global Trade, Empire, and Industrialization, 1600-1870'
 uid: a32be1ef-4e48-634e-9439-927da9258e29
