--- a/content/resources/mit21h_009s14_lec_11.md
+++ b/content/resources/mit21h_009s14_lec_11.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
+parent_uid: 6414518c-9779-ff96-7dd5-75efc5330c31
 resourcetype: Document
 title: Empire and Architecture ca. 1700
 uid: ac23376c-4af8-223b-b9f7-890eae8515ea
