--- a/content/resources/mit21h_009s14_lec_18.md
+++ b/content/resources/mit21h_009s14_lec_18.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
+parent_uid: 6414518c-9779-ff96-7dd5-75efc5330c31
 resourcetype: Document
 title: 'The Big Picture III: Globalization, 1870-Present?'
 uid: 5e4ebecd-6f47-7da0-ab1e-21e2b93292b1
