--- a/content/resources/mit21h_009s14_lec_2.md
+++ b/content/resources/mit21h_009s14_lec_2.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
+parent_uid: 6414518c-9779-ff96-7dd5-75efc5330c31
 resourcetype: Document
 title: 'Introduction II. Space: "Reading" Maps'
 uid: 44e19244-b1b1-6c1e-5ec7-96c819dd7ac9
