--- a/content/resources/mit21h_009s14_lec_7.md
+++ b/content/resources/mit21h_009s14_lec_7.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
+parent_uid: 6414518c-9779-ff96-7dd5-75efc5330c31
 resourcetype: Document
 title: Contact and Conflict in the Americas
 uid: 52efa310-a3f9-26ac-616e-9c99257d49ee
