--- a/content/resources/mit21h_009s14_lec_3.md
+++ b/content/resources/mit21h_009s14_lec_3.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
+parent_uid: 6414518c-9779-ff96-7dd5-75efc5330c31
 resourcetype: Document
 title: 'The Big Picture I: From Eurasia to the World, ca. 1300 to 1600'
 uid: 9e7951ed-5af7-b777-3781-f483d368d935
