--- a/content/resources/mit21h_009s14_lec_5.md
+++ b/content/resources/mit21h_009s14_lec_5.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
+parent_uid: 6414518c-9779-ff96-7dd5-75efc5330c31
 resourcetype: Document
 title: Contact and Conflict in East Asia
 uid: 3fce3aab-df6f-e1f1-bfb1-54230ef7b378
