--- a/content/resources/mit21h_009s14_lec_10.md
+++ b/content/resources/mit21h_009s14_lec_10.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: 'This file contains the information regarding the big picture II: global
   trade, empire, and industrialization, 1600-1870.'
-file: /media/courses/21h-009-the-world-1400-present-spring-2014/a32be1ef4e48634e9439927da9258e29_MIT21H_009S14_Lec_10.pdf
+file: /courses/21h-009-the-world-1400-present-spring-2014/a32be1ef4e48634e9439927da9258e29_MIT21H_009S14_Lec_10.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: 'The Big Picture II: Global Trade, Empire, and Industrialization, 1600-1870'
 uid: a32be1ef-4e48-634e-9439-927da9258e29
 ---
+This file contains the information regarding the big picture II: global trade, empire, and industrialization, 1600-1870.
