--- a/content/resources/mit21h_009s14_lec_11.md
+++ b/content/resources/mit21h_009s14_lec_11.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: This resource contains the information regarding Empire and Architecture
   ca. 1700.
-file: /media/courses/21h-009-the-world-1400-present-spring-2014/ac23376c4af8223bb9f7890eae8515ea_MIT21H_009S14_Lec_11.pdf
+file: /courses/21h-009-the-world-1400-present-spring-2014/ac23376c4af8223bb9f7890eae8515ea_MIT21H_009S14_Lec_11.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: Empire and Architecture ca. 1700
 uid: ac23376c-4af8-223b-b9f7-890eae8515ea
 ---
+This resource contains the information regarding Empire and Architecture ca. 1700.
