--- a/content/resources/mit21h_009s14_lec_2.md
+++ b/content/resources/mit21h_009s14_lec_2.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: 'This resource contains the information regarding Introduction II. Space:
   "Reading" Maps.'
-file: /media/courses/21h-009-the-world-1400-present-spring-2014/44e19244b1b16c1e5ec796c819dd7ac9_MIT21H_009S14_Lec_2.pdf
+file: /courses/21h-009-the-world-1400-present-spring-2014/44e19244b1b16c1e5ec796c819dd7ac9_MIT21H_009S14_Lec_2.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: 'Introduction II. Space: "Reading" Maps'
 uid: 44e19244-b1b1-6c1e-5ec7-96c819dd7ac9
 ---
+This resource contains the information regarding Introduction II. Space: "Reading" Maps.
