--- a/content/resources/mit21h_009s14_lec_6.md
+++ b/content/resources/mit21h_009s14_lec_6.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: "This file contains the information regarding Contact and Conflict in\
   \ East Asia \u2013 Discussion."
-file: /media/courses/21h-009-the-world-1400-present-spring-2014/30c3fbef5368d2e0668172e8c7847bad_MIT21H_009S14_Lec_6.pdf
+file: /courses/21h-009-the-world-1400-present-spring-2014/30c3fbef5368d2e0668172e8c7847bad_MIT21H_009S14_Lec_6.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: "Contact and Conflict in East Asia \u2013 Discussion"
 uid: 30c3fbef-5368-d2e0-6681-72e8c7847bad
 ---
+This file contains the information regarding Contact and Conflict in East Asia – Discussion.
