--- a/content/resources/mit21h_009s14_lec_7.md
+++ b/content/resources/mit21h_009s14_lec_7.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: This file contains the information regarding Contact and Conflict in
   the Americas.
-file: /media/courses/21h-009-the-world-1400-present-spring-2014/52efa310a3f926ac616e9c99257d49ee_MIT21H_009S14_Lec_7.pdf
+file: /courses/21h-009-the-world-1400-present-spring-2014/52efa310a3f926ac616e9c99257d49ee_MIT21H_009S14_Lec_7.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: Contact and Conflict in the Americas
 uid: 52efa310-a3f9-26ac-616e-9c99257d49ee
 ---
+This file contains the information regarding Contact and Conflict in the Americas.
