Sync all content

--- a/content/resources/21h-009s14-th.md
+++ b/content/resources/21h-009s14-th.md
@@ -5,6 +5,7 @@ description: "The Hall of Supreme Harmony (\u592A\u548C\u6BBF T\xE0i H\xE9 Di\xE
   \ Dynasty Emperors used the hall to host important ceremonies, such as enthronements\
   \ and weddings. (Photo courtesy of See-ming Lee on Flickr. CC-BY)"
 file: /courses/21h-009-the-world-1400-present-spring-2014/7a746a83a48d3b154d75bd70401643e7_21h-009s14-th.jpg
+file_size: 10916
 file_type: image/jpeg
 image_metadata:
   caption: "The Hall of Supreme Harmony (\u592A\u548C\u6BBF T\xE0i H\xE9 Di\xE0n)\
