--- a/content/resources/mit21h_009s14_lec_2.md
+++ b/content/resources/mit21h_009s14_lec_2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains the information regarding Introduction II. Space:
   "Reading" Maps.'
 file: /courses/21h-009-the-world-1400-present-spring-2014/44e19244b1b16c1e5ec796c819dd7ac9_MIT21H_009S14_Lec_2.pdf
+file_size: 2968717
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
