--- a/content/resources/mit21h_009s14_lec_8.md
+++ b/content/resources/mit21h_009s14_lec_8.md
@@ -3,6 +3,7 @@ content_type: resource
 description: "This file contains the information regarding Contact and Conflict in\
   \ the Americas \u2013 Discussion."
 file: /courses/21h-009-the-world-1400-present-spring-2014/1fb58bd03f889c83364a74f9a426502a_MIT21H_009S14_Lec_8.pdf
+file_size: 2036975
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
