--- a/content/resources/21h-009s14.md
+++ b/content/resources/21h-009s14.md
@@ -11,8 +11,8 @@ image_metadata:
   caption: "The Hall of Supreme Harmony (\u592A\u548C\u6BBF T\xE0i H\xE9 Di\xE0n)\
     \ is the largest hall in the Forbidden City. Build in 1406, Ming Dynasty and Qing\
     \ Dynasty Emperors used the hall to host important ceremonies, such as enthronements\
-    \ and weddings. (Photo courtesy of {{% resource_link \"d230000e-2ed9-4867-ad4d-9932b5562c81\"\
-    \ \"See-ming Lee\" %}} on Flickr. CC BY.)"
+    \ and weddings. (Photo courtesy of [See-ming Lee](http://www.flickr.com/photos/seeminglee/14631487663)\
+    \ on Flickr. CC BY.)"
   credit: Photo courtesy of See-ming Lee on Flickr. CC-BY
   image-alt: The steps leading up to the Hall of Supreme Harmony in the Forbidden
     City in Beijing, China. The stairs are separated in the center by a path of dragon
